fix: Fix responsive issues - on small device, change grid layout to flex-col

--- a/lab/rupert/style.css
+++ b/lab/rupert/style.css
@@ -367,6 +367,11 @@ footer p{
     header {
         flex-direction: column;
     }
+    
+    main {
+        display: flex;
+        flex-direction: column;
+    }
 
     .social-kit {
         width: 100%;
